--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
+  "homepage": "https://yipa-01.github.io/portfolio",
   "name": "xolio_react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
-    "gh-pages": "^6.3.0",
     "isotope-layout": "^3.0.6",
     "jquery": "^3.6.3",
     "react": "^18.2.0",
@@ -49,5 +49,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://yipa-01.github.io/"
+  
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
